Fixed spacing issue at bottom of registered commands

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     body {
         background: black;
         overflow-y: scroll;
-        padding-bottom: 5%;
+        padding-bottom: 1em;
     }
 
     .registered {
@@ -56,7 +56,7 @@
     body {
         background: black;
         overflow-y: scroll;
-        padding-bottom: 5%;
+        padding-bottom: 1em;
     }
     
     .registered {
